Jeu_de_tests/error/error_2.tpc

int f1(int *i, char *c){
    reade(i);
    readc(c);
    return 0;
}


int main(void) {
    int i; char c;
    return f1(&i, &c);
}
